# sight

./: .clang-tidy  .fw4spl  .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  .sheldonignore  .sight  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  COPYING  COPYING.LESSER  README.md  add_sub.py  conanfile.py  conanfile.txt  list  lsite2  tt.sh
Apps/ARCalibration/: CMakeLists.txt  Properties.cmake
Apps/ARCalibration/rc/: arcalibration.icns  plugin.xml  profile.xml
Apps/DroidSimpleGui/: CMakeLists.txt  Properties.cmake
Apps/DroidSimpleGui/rc/: plugin.xml
Apps/TutoPython/: CMakeLists.txt  Properties.cmake
Apps/TutoPython/rc/: plugin.xml  profileQt.xml
Apps/VRRender/: CMakeLists.txt  Properties.cmake
Apps/VRRender/doc/: Makefile  htmlhelpTowxHtmlHelp  make.bat  makeall.sh
Apps/VRRender/rc/: plugin.xml  profile.xml  vrrender.icns
Bundles/ioDicomExt/: CMakeLists.txt  Properties.cmake
Bundles/ioDicomExt/rc/: plugin.xml
Bundles/ioDicomExt/test/: cppunit.options
Bundles/style/: CMakeLists.txt  Properties.cmake
Bundles/style/rc/: darkstyle.qrc  darkstyle.qss  plugin.xml
CMake/pcl/: CMakeLists.txt
SrcLib/fwDcmtkIO/: CMakeLists.txt  Properties.cmake
SrcLib/fwDcmtkIO/test/: CMakeLists.txt  Properties.cmake
SrcLib/fwDicomIOExt/: CMakeLists.txt  Properties.cmake
SrcLib/fwDicomIOExt/test/: cppunit.options
SrcLib/fwDicomIOFilterQt/: CMakeLists.txt  Properties.cmake
SrcLib/fwGuiQtExt/: CMakeLists.txt  Properties.cmake
SrcLib/fwIGG/: CMakeLists.txt  Properties.cmake
SrcLib/fwIGG/test/: CMakeLists.txt  Properties.cmake
SrcLib/fwNetwork/: CMakeLists.txt  Properties.cmake
SrcLib/fwPacsIO/: CMakeLists.txt  Properties.cmake
SrcLib/fwPacsIO/test/: CMakeLists.txt  Properties.cmake
SrcLib/fwPython/: CMakeLists.txt  Properties.cmake
SrcLib/fwPython/test/: CMakeLists.txt  Properties.cmake
SrcLib/gdcmIO/: CMakeLists.txt  Properties.cmake
SrcLib/gdcmIO/test/: cppunit.options
SrcLib/igtlProtocol/: CMakeLists.txt
SrcLib/igtlProtocol/test/: CMakeLists.txt
SrcLib/zmqNetwork/: CMakeLists.txt  Properties.cmake
Utilities/arucoMarker/: CMakeLists.txt  Properties.cmake
Utilities/arucoMarker/src/: main.cpp
Utilities/calDataGenerator/: CMakeLists.txt  Properties.cmake
Utilities/calDataGenerator/src/: main.cpp
Utilities/charucoBoard/: CMakeLists.txt  Properties.cmake
Utilities/charucoBoard/src/: main.cpp
apps/SightCalibrator/: CMakeLists.txt  man.md
apps/SightCalibrator/rc/: plugin.xml
apps/SightViewer/: CMakeLists.txt  Properties.cmake  man.md
apps/SightViewer/rc/: plugin.xml
apps/sight_viewer/: CMakeLists.txt
apps/sight_viewer/rc/: plugin.xml
libs/__/: CMakeLists.txt
libs/__/activity/: CMakeLists.txt  README.md  launcher.cpp  launcher.hpp  message.cpp  message.hpp  sequencer.cpp  sequencer.hpp
libs/__/app/: CMakeLists.txt  README.md  config_controller.cpp  config_controller.hpp  config_manager.hpp  multi_config_controller.cpp  multi_config_controller.hpp  update_parallel.hpp  update_sequence.cpp  update_sequence.hpp  updater.hpp
libs/__/core/: CMakeLists.txt  Dependencies.cmake  README.md  base_object.hpp  clock.cpp  clock.hpp  compare.hpp  compound_types.hpp  demangler.cpp  demangler.hpp  exception.cpp  exception.hpp  exceptionmacros.hpp  factory_registry.hpp  function.hpp  hires_clock.cpp  hires_clock.hpp  hires_timer.cpp  hires_timer.hpp  id.cpp  id.hpp  lazy_instantiator.hpp  logic_stamp.cpp  logic_stamp.hpp  macros.hpp  object.cpp  profiling.hpp  spy_log.hpp  time_stamp.cpp  time_stamp.hpp  timer.cpp  timer.hpp  tmp  type.cpp  type.hpp  updater.hpp
libs/__/data/: Activity.cpp  Activity.hpp  ActivitySet.cpp  ActivitySet.hpp  Array.cpp  Array.hpp  Boolean.cpp  Boolean.hpp  BufferTL.cpp  BufferTL.hpp  CMakeLists.txt  CalibrationInfo.cpp  CalibrationInfo.hpp  Camera.cpp  Camera.hpp  CameraSet.cpp  CameraSet.hpp  Color.cpp  Color.hpp  Composite.cpp  Composite.hpp  DicomSeries.cpp  DicomSeries.hpp  Double.cpp  Double.hpp  Exception.cpp  Exception.hpp  FiducialsSeries.cpp  FiducialsSeries.hpp  Float.cpp  Float.hpp  FrameTL.cpp  FrameTL.hpp  GenericField.hpp  GenericFieldBase.cpp  GenericFieldBase.hpp  GenericTL.hpp  GenericTL.hxx  Image.cpp  Image.hpp  (+173 more)
libs/__/service/: README.md  SConfigController.cpp  SConfigController.hpp  SMultiConfigController.cpp  SMultiConfigController.hpp  ServiceFactoryRegistry.hpp  app_config_manager.cpp  app_config_manager.hpp  base.cpp  base.hpp  controller.cpp  controller.hpp  filter.cpp  filter.hpp  generator.hpp  has_services.cpp  has_services.hpp  macros.hpp  manager.cpp  manager.hpp  notifier.cpp  notifier.hpp  object_parser.cpp  object_parser.hpp  op.cpp  op.hpp  registerer.cpp  registerer.hpp  registry.cpp  registry.hpp  service_factory_registry.hpp  synchronizer.cpp  synchronizer.hpp  tracker.cpp  tracker.hpp
libs/__/utest/: Filter.cpp  Filter.hpp  Slow.hpp  exception.hpp  filter.hpp  profiling.hpp  slow.hpp  wait.hpp
libs/__/utestData/: Data.cpp  Data.hpp  DicomReaderTest.cpp  DicomReaderTest.hpp  File.cpp  File.hpp  initialisation.cpp
libs/__/utest_data/: CMakeLists.txt  Data.cpp  Data.hpp  DicomReaderTest.cpp  DicomReaderTest.hpp  File.cpp  File.hpp  dicom_reader_test.cpp  dicom_reader_test.hpp  file.hpp  initialisation.cpp
libs/core/: CMakeLists.txt  autoload.cpp  autoload.hpp  namespace.hpp
libs/core/activities/: IActivitySequencer.cpp  IActivitySequencer.hpp  IObjectValidator.hpp  IValidator.hpp  Properties.cmake  namespace.hpp
libs/core/activity/: ActivityMsg.cpp  ActivityMsg.hpp  CMakeLists.txt  IActivityLauncher.cpp  IActivityLauncher.hpp  IActivitySequencer.cpp  IActivitySequencer.hpp  IActivityValidator.cpp  IActivityValidator.hpp  IBuilder.cpp  IBuilder.hpp  IObjectValidator.hpp  IValidator.hpp  Properties.cmake  README.md  namespace.hpp
libs/core/arData/: Properties.cmake
libs/core/arDataCamp/: CMakeLists.txt  Properties.cmake
libs/core/arPreferences/: Properties.cmake
libs/core/arServices/: Properties.cmake
libs/core/atoms/: Map.cpp  (+23 more)
modules/io/: CMakeLists.txt
tutorials/xml/: CMakeLists.txt
utils/arucoMarker/: CMakeLists.txt  Properties.cmake
(+29087 files in other folders)
